[package]
name = "winit"
version = "0.1.0"
edition = "2021"


[package.metadata.docs.rs]
all-features = true

[features]
default = []
winit = ["egui-winit"]

[dependencies]
egui-winit = { version = "0.22.0", optional = true, default-features = true}
winit = "0.28.6"
glutin = "0.30"
egui = { version = "0.22.0", default-features = false, features = [
  "bytemuck",
] }
bytemuck = "1.7"
glow = "0.12"
log = { version = "0.4", features = ["std"] }
raw-window-handle = "0.5.0"
glutin-winit = "0.3.0"
egui_glow = { version = "0.22.0", features = ["winit"]  }


# Native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = { version = "0.22.0" , optional = true}